# POS_Semestralka

./: CMakeLists.txt  hra.c  hra.h  hrac.c  hrac.h  klient.c  server.c
